# Isnt-CPP-just-a-D

./: README.md  SzymonZajączkowski.rar
13.0a/: 13.0a.cbp  main.cpp
13.0b/: 13.0b.cbp  main.cpp
2nd semester/Exercise1_Methods&Classess/: CMakeLists.txt  main.cpp
2nd semester/Exercise2_Classess&Constructors/: CMakeLists.txt  main.cpp
2nd semester/Exercise3_CopyingConstructors/: CMakeLists.txt  main.cpp
2nd semester/Exercise4_FriendClass&Function/: CMakeLists.txt  main.cpp
2nd semester/Exercise5_Fraction/: CMakeLists.txt  main.cpp
2nd semester/Exercise6_Inheritance/: CMakeLists.txt  main.cpp
2nd semester/Exercise_ASCII-Image/: CMakeLists.txt  main.cpp
2nd semester/Exercise_ASCII-Image_CodeBlocks/: Exercise_ASCII-Image_CodeBlocks.cbp  Exercise_ASCII-Image_CodeBlocks.depend  Exercise_ASCII-Image_CodeBlocks.layout  main.cpp
2nd semester/Exercise_Snake/: Exercise_Snake.cbp  Exercise_Snake.depend  Exercise_Snake.layout  main.cpp
2nd semester/Exercise_Snake_Clion/: CMakeLists.txt
2nd semester/Zad7_Virtual/: CMakeLists.txt  main.cpp
ASCII PIC CLION/: CMakeLists.txt  main.cpp
ASCII Pic/ASCII Picture/: ASCII Picture.cbp  ASCII Picture.depend  ASCII Picture.layout  main.cpp
Functions, Scopes and Headers/Functions, scopes and headers/: Functions, scopes and headers.cbp  Functions, scopes and headers.depend  Functions, scopes and headers.layout  functions.cpp  functions.hpp  main.cpp
Functions, Scopes and Headers/List/: List.cbp  main.cpp
Lab 10.0/: Lab 10.0.cbp  Lab 10.0.depend  Lab 10.0.layout  Lab 10.cpp  test.cpp
Lab 10.1/: Lab 10.1.cbp  Lab 10.1.cpp  Lab 10.1.depend  main2.cpp
Lab 11.1 + 11.2/: Lab 11.1 + 11.2.cpp  Lab 11.1.cbp  Lab 11.1.layout
Lab 13/: Lab 13.cbp  Lab 13.cpp  Lab 13.depend  Lab 13.layout  main.cpp
Lab 13.b/: Lab 13.b.cbp  Lab 13.b.cpp  Lab 13.b.depend
Lab 14.1/: Lab 14.1.cbp  Lab 14.1.cpp  Lab 14.1.layout  main.cpp
Lab 2.1/: Lab 2.1.cbp  Lab 2.1.depend  main.cpp
Lab 2.1a/: Lab 2.1a.cbp  Lab 2.1a.depend  main.cpp
Lab 3.1/: Lab 3.1.cbp  main.cpp
Lab 3.1a/: Lab 3.1a.cbp  Lab 3.1a.depend  Lab 3.1a.layout  main.cpp
Lab 3.2/: Lab 3.2.cbp  Lab 3.2.cpp  Lab 3.2.depend  Lab 3.2.layout
Lab 4.1/: Lab 4.1.cbp  Lab 4.1.depend  main.cpp
Lab 4.2/: Lab 4.2.cbp  Lab 4.2.depend  main.cpp
Lab 4.3/: Lab 4.3.cbp  Lab 4.3.cpp  Lab 4.3.depend
Lab 5.1/: Lab 5.1.cbp  Lab 5.1.depend  Lab 5.1.layout  main.cpp
Lab 5.2/: Lab 5.2.cbp  Lab 5.2.cpp  Lab 5.2.depend  Lab 5.2.layout  main.cpp
Lab 6.1/: Lab 6.1.cbp  Lab 6.1.depend  main.cpp
Lab 6.2/: Lab 6.2.cbp  Lab 6.2.depend  Lab 6.2.layout  main.cpp
Lab 7.1/: Lab 7.1.cbp  Lab 7.1.depend  main.cpp
Lab 7.2/: Lab 7.2.cbp  Lab 7.2.cpp  Lab 7.2.depend  Lab 7.2.layout  main.cpp
Lab 7.3/: Lab 7.3.cbp  main.cpp
Lab 8.1/: Lab 8.1.cbp  Lab 8.1.cpp  main.cpp
Lab 8.2/: Lab 8.2.cbp  Lab 8.2.cpp
Lab 8.3/: Lab 8.3.cbp  Lab 8.3.depend  main.cpp
Lab 8.4/: Lab 8.4.cbp  Lab 8.4.cpp  Lab 8.4.layout  main.cpp
Test 2/: Test 2.cbp  Test 2.depend  main.cpp
Test 3/: Test 3.cbp  Test 3.depend  main.cpp
Testing/: Testing.cbp  Testing.depend  Testing.layout  test.txt
(+7 files in other folders)
